wall texture spacing fixed, experimenting with minecraft textures

--- a/popup.css
+++ b/popup.css
@@ -18,6 +18,9 @@ body {
   transform-style: preserve-3d;
 }
 .room_wall {
+  display: flex;
+  flex-flow: column;
+  flex-wrap: wrap;
   position: absolute;
   width: 600px;
   height: 600px;
@@ -47,15 +50,15 @@ body {
   opacity: 0.35;
 }
 .wall_shade-back {
-  opacity: 0.25;
+  opacity: 0.15;
 }
 .wall_shade-left {
-  opacity: 0.15;
+  opacity: 0.25;
 }
 .wall_shade-top {
   opacity: 0.05;
 }
 .wall_block {
-  width: 20%;
-  height: 20%;
+  width: 25%;
+  height: 25%;
 }
